@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,179 +23,151 @@
 
 /*
  * @test
- * @bug 6336885 7196799 7197573 7198834 8000245 8000615 8001440 8008577
- *      8010666 8013086 8013233 8013903 8015960 8028771 8054482 8062006
- *      8150432 8215913 8220227 8228465 8232871 8232860 8236495 8245241
- *      8246721 8248695 8257964 8261919
- * @summary tests for "java.locale.providers" system property
+ * @bug 6336885 7196799 7197573 8008577 8010666 8013233 8015960 8028771
+ *      8054482 8062006 8150432 8215913 8220227 8236495
+ * @summary General Locale provider test (ex: adapter loading). See the
+ *          other LocaleProviders* test classes for more specific tests (ex:
+ *          java.text.Format related bugs).
  * @library /test/lib
  * @build LocaleProviders
- *        providersrc.spi.src.tznp
- *        providersrc.spi.src.tznp8013086
- * @modules java.base/sun.util.locale
- *          java.base/sun.util.locale.provider
- * @run main/othervm -Djdk.lang.Process.allowAmbiguousCommands=false LocaleProvidersRun
+ * @modules java.base/sun.util.locale.provider
+ * @run junit/othervm LocaleProvidersRun
  */
 
 import java.util.Locale;
+import java.util.stream.Stream;
 
-import jdk.test.lib.JDKToolLauncher;
-import jdk.test.lib.process.ProcessTools;
-import jdk.test.lib.Utils;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.DisabledIfSystemProperty;
+import org.junit.jupiter.api.condition.EnabledIfSystemProperty;
+import org.junit.jupiter.api.condition.EnabledOnOs;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
+import static org.junit.jupiter.api.condition.OS.WINDOWS;
+
+/*
+ * Note: If this test launches too many JVMs, consider increasing timeout.
+ * As the LocaleProvider is set during java startup time, this test and the subclasses
+ * will always have to launch a separate JVM for testing of different providers.
+ */
 public class LocaleProvidersRun {
-    public static void main(String[] args) throws Throwable {
-        //get the platform default locales
+
+    private static String defLang;
+    private static String defCtry;
+    private static String defFmtLang;
+    private static String defFmtCtry;
+
+    // Get the system default locale values. Used to decide param values for tests.
+    @BeforeAll
+    static void setUp() {
         Locale platDefLoc = Locale.getDefault(Locale.Category.DISPLAY);
-        String defLang = platDefLoc.getLanguage();
-        String defCtry = platDefLoc.getCountry();
-        System.out.println("DEFLANG = " + defLang);
-        System.out.println("DEFCTRY = " + defCtry);
-
         Locale platDefFormat = Locale.getDefault(Locale.Category.FORMAT);
-        String defFmtLang = platDefFormat.getLanguage();
-        String defFmtCtry = platDefFormat.getCountry();
-        System.out.println("DEFFMTLANG = " + defFmtLang);
-        System.out.println("DEFFMTCTRY = " + defFmtCtry);
+        defLang = platDefLoc.getLanguage();
+        defCtry = platDefLoc.getCountry();
+        defFmtLang = platDefFormat.getLanguage();
+        defFmtCtry = platDefFormat.getCountry();
 
-        //Run Test
-        //testing HOST is selected for the default locale,
-        // if specified on Windows or MacOSX
+        // Print out system defaults for diagnostic purposes
+        System.out.printf("DEFLANG = %s, DEFCTRY = %s, DEFFMTLANG = %s, DEFFMTCTRY = %s",
+                defLang, defCtry, defFmtLang, defFmtCtry);
+    }
+
+    /*
+     * Test the adapter loading logic in LocaleProviderAdapter.
+     * Ensures that correct fallbacks are implemented.
+     */
+    @ParameterizedTest
+    @MethodSource
+    public void adapterTest(String prefList, String param1,
+                            String param2, String param3) throws Throwable {
+        LocaleProviders.test(prefList, "adapterTest", param1, param2, param3);
+    }
+
+    /*
+     * Data provider which only launches against the LocaleProvider::adapterTest
+     * method. The arguments are dictated based off the operating system/platform
+     * Locale. Tests against variety of provider orders.
+     */
+    private static Stream<Arguments> adapterTest() {
+        // Testing HOST is selected for the default locale if specified on Windows or MacOSX
         String osName = System.getProperty("os.name");
         String param1 = "JRE";
-        if(osName.startsWith("Windows") || osName.startsWith("Mac")) {
+        if (osName.startsWith("Windows") || osName.startsWith("Mac")) {
             param1 = "HOST";
         }
-        testRun("HOST,JRE", "adapterTest", param1, defLang, defCtry);
 
-        //testing HOST is NOT selected for the non-default locale, if specified
-        //Try to find the locale JRE supports which is not the platform default
+        // Testing HOST is NOT selected for the non-default locale, if specified
+        // try to find the locale JRE supports which is not the platform default
         // (HOST supports that one)
         String param2;
         String param3;
-        if (!defLang.equals("en") && !defFmtLang.equals("en")){
+        if (!defLang.equals("en") && !defFmtLang.equals("en")) {
             param2 = "en";
             param3 = "US";
-        } else if(!defLang.equals("ja") && !defFmtLang.equals("ja")){
+        } else if (!defLang.equals("ja") && !defFmtLang.equals("ja")) {
             param2 = "ja";
             param3 = "JP";
         } else {
             param2 = "zh";
             param3 = "CN";
         }
-        testRun("HOST,JRE", "adapterTest", "JRE", param2, param3);
 
-        //testing SPI is NOT selected, as there is none.
-        testRun("SPI,JRE", "adapterTest", "JRE", "en", "US");
-        testRun("SPI,COMPAT", "adapterTest", "JRE", "en", "US");
+        return Stream.of(
+                Arguments.of("HOST,JRE", param1, defLang, defCtry),
+                Arguments.of("HOST,JRE", "JRE", param2, param3),
 
-        //testing the order, variant #1. This assumes en_GB DateFormat data are
-        // available both in JRE & CLDR
-        testRun("CLDR,JRE", "adapterTest", "CLDR", "en", "GB");
-        testRun("CLDR,COMPAT", "adapterTest", "CLDR", "en", "GB");
+                // Testing SPI is NOT selected, as there is none.
+                Arguments.of("SPI,JRE", "JRE", "en", "US"),
+                Arguments.of("SPI,COMPAT", "JRE", "en", "US"),
 
-        //testing the order, variant #2. This assumes en_GB DateFormat data are
-        // available both in JRE & CLDR
-        testRun("JRE,CLDR", "adapterTest", "JRE", "en", "GB");
-        testRun("COMPAT,CLDR", "adapterTest", "JRE", "en", "GB");
+                // Testing the order, variant #1. This assumes en_GB DateFormat data are
+                // available both in JRE & CLDR
+                Arguments.of("CLDR,JRE", "CLDR", "en", "GB"),
+                Arguments.of("CLDR,COMPAT", "CLDR", "en", "GB"),
 
-        //testing the order, variant #3 for non-existent locale in JRE
-        // assuming "haw" is not in JRE.
-        testRun("JRE,CLDR", "adapterTest", "CLDR", "haw", "");
-        testRun("COMPAT,CLDR", "adapterTest", "CLDR", "haw", "");
+                // Testing the order, variant #2. This assumes en_GB DateFormat data are
+                // available both in JRE & CLDR
+                Arguments.of("JRE,CLDR", "JRE", "en", "GB"),
+                Arguments.of("COMPAT,CLDR", "JRE", "en", "GB"),
 
-        //testing the order, variant #4 for the bug 7196799. CLDR's "zh" data
-        // should be used in "zh_CN"
-        testRun("CLDR", "adapterTest", "CLDR", "zh", "CN");
+                // Testing the order, variant #3 for non-existent locale in JRE
+                // assuming "haw" is not in JRE.
+                Arguments.of("JRE,CLDR", "CLDR", "haw", ""),
+                Arguments.of("COMPAT,CLDR", "CLDR", "haw", ""),
 
-        //testing FALLBACK provider. SPI and invalid one cases.
-        testRun("SPI", "adapterTest", "FALLBACK", "en", "US");
-        testRun("FOO", "adapterTest", "CLDR", "en", "US");
-        testRun("BAR,SPI", "adapterTest", "FALLBACK", "en", "US");
+                // Testing the order, variant #4 for the bug 7196799. CLDR's "zh" data
+                // should be used in "zh_CN"
+                Arguments.of("CLDR", "CLDR", "zh", "CN"),
 
-        //testing 7198834 fix.
-        testRun("HOST", "bug7198834Test", "", "", "");
-
-        //testing 8000245 fix.
-        testRun("JRE", "tzNameTest", "Europe/Moscow", "", "");
-        testRun("COMPAT", "tzNameTest", "Europe/Moscow", "", "");
-
-        //testing 8000615 fix.
-        testRun("JRE", "tzNameTest", "America/Los_Angeles", "", "");
-        testRun("COMPAT", "tzNameTest", "America/Los_Angeles", "", "");
-
-        //testing 8001440 fix.
-        testRun("CLDR", "bug8001440Test", "", "", "");
-
-        //testing 8010666 fix.
-        if (defLang.equals("en")) {
-            testRun("HOST", "bug8010666Test", "", "", "");
-        }
-
-        //testing 8013086 fix.
-        testRun("JRE,SPI", "bug8013086Test", "ja", "JP", "");
-        testRun("COMPAT,SPI", "bug8013086Test", "ja", "JP", "");
-
-        //testing 8013903 fix. (Windows only)
-        testRun("HOST,JRE", "bug8013903Test", "", "", "");
-        testRun("HOST", "bug8013903Test", "", "", "");
-        testRun("HOST,COMPAT", "bug8013903Test", "", "", "");
-
-        //testing 8027289 fix, if the platform format default is zh_CN
-        // this assumes Windows' currency symbol for zh_CN is \u00A5, the yen
-        // (yuan) sign.
-        if (defFmtLang.equals("zh") && defFmtCtry.equals("CN")) {
-            testRun("JRE,HOST", "bug8027289Test", "FFE5", "", "");
-            testRun("COMPAT,HOST", "bug8027289Test", "FFE5", "", "");
-            testRun("HOST", "bug8027289Test", "00A5", "", "");
-        }
-
-        //testing 8220227 fix. (Windows only)
-        if (!defLang.equals("en")) {
-            testRun("HOST", "bug8220227Test", "", "", "");
-        }
-
-        //testing 8228465 fix. (Windows only)
-        testRun("HOST", "bug8228465Test", "", "", "");
-
-        //testing 8232871 fix. (macOS only)
-        testRun("HOST", "bug8232871Test", "", "", "");
-
-        //testing 8232860 fix. (macOS/Windows only)
-        testRun("HOST", "bug8232860Test", "", "", "");
-
-        //testing 8245241 fix.
-        //jdk.lang.Process.allowAmbiguousCommands=false is needed for properly escaping
-        //double quotes in the string argument.
-        testRun("FOO", "bug8245241Test",
-            "Invalid locale provider adapter \"FOO\" ignored.", "", "");
-
-        //testing 8248695 fix.
-        testRun("HOST", "bug8248695Test", "", "", "");
-
-        //testing 8257964 fix. (macOS/Windows only)
-        testRun("HOST", "bug8257964Test", "", "", "");
+                // Testing FALLBACK provider. SPI and invalid one cases.
+                Arguments.of("SPI", "FALLBACK", "en", "US"),
+                Arguments.of("FOO", "CLDR", "en", "US"),
+                Arguments.of("BAR,SPI", "FALLBACK", "en", "US")
+            );
     }
 
-    private static void testRun(String prefList, String methodName,
-            String param1, String param2, String param3) throws Throwable{
-        JDKToolLauncher launcher = JDKToolLauncher.createUsingTestJDK("java");
-        launcher.addToolArg("-ea")
-                .addToolArg("-esa")
-                .addToolArg("-cp")
-                .addToolArg(Utils.TEST_CLASS_PATH)
-                .addToolArg("-Djava.util.logging.config.class=LocaleProviders$LogConfig")
-                .addToolArg("-Djava.locale.providers=" + prefList)
-                .addToolArg("--add-exports=java.base/sun.util.locale.provider=ALL-UNNAMED")
-                .addToolArg("LocaleProviders")
-                .addToolArg(methodName)
-                .addToolArg(param1)
-                .addToolArg(param2)
-                .addToolArg(param3);
-        int exitCode = ProcessTools.executeCommand(launcher.getCommand())
-                .getExitValue();
-        if (exitCode != 0) {
-            throw new RuntimeException("Unexpected exit code: " + exitCode);
-        }
+    /*
+     * 8010666: Test to ensure correct implementation of Currency/LocaleNameProvider
+     * in HOST Windows provider (English locale)
+     */
+    @Test
+    @EnabledOnOs(WINDOWS)
+    @EnabledIfSystemProperty(named = "user.language", matches = "en")
+    public void currencyNameProviderWindowsHost() throws Throwable {
+        LocaleProviders.test("HOST", "bug8010666Test");
+    }
+
+    /*
+     * 8220227: Ensure Locale::getDisplayCountry does not display error message
+     * under HOST Windows (non-english locale)
+     */
+    @Test
+    @EnabledOnOs(WINDOWS)
+    @DisabledIfSystemProperty(named = "user.language", matches = "en")
+    public void nonEnglishDisplayCountryHost() throws Throwable {
+        LocaleProviders.test("HOST", "bug8220227Test");
     }
 }
